# mai-oop-labs

oop lab1/: CMakeLists.txt  README.md  main.cpp
oop lab1/.devcontainer/: devcontainer.json
oop lab1/include/: trololo.h
oop lab1/src/: trololo.cpp
oop lab1/tests/: test01.cpp
oop lab2/: CMakeLists.txt  README.md  main.cpp
oop lab2/include/: five.h
oop lab2/src/: five.cpp
oop lab3/: CMakeLists.txt  main.cpp
oop lab3/include/: array.h  figure.h  rectangle.h  square.h  trapeze.h
oop lab3/src/: array.cpp  figure.cpp  rectangle.cpp  square.cpp  trapeze.cpp
oop lab3/tests/: test.cpp
oop lab4/: CMakeLists.txt  README.md  main.cpp
oop lab4/include/: array.h  figure.h  point.h  rectangle.h  square.h  trapeze.h
oop lab4/tests/: test.cpp
oop lab5/: CMakeLists.txt  README.md
oop lab5/include/: container.h
oop lab5/tests/: test01.cpp
oop lab6/: CMakeLists.txt  README.md
oop lab6/include/: dungeon_editor.h
oop lab6/tests/: test.cpp
oop lab7/: CMakeLists.txt  README.md
oop lab7/include/: dungeon_editor.h
oop lab7/tests/: test.cpp
